# FF

./: .gitignore  README.md  TODO.md  cookies.json  main.py  mypy.ini  setup.cfg  tox.ini
.github/workflows/: tests.yml
FF/: main.py
FF/data/: cookies.json
tests/: main_test.py  test_main.py
tests/data/: FF_0_wk0_0.json  FF_0_wk0_1.json  FF_0_wk0_10.json  FF_0_wk0_11.json  FF_0_wk0_2.json  FF_0_wk0_3.json  FF_0_wk0_4.json  FF_0_wk0_5.json  FF_0_wk0_6.json  FF_0_wk0_7.json  FF_0_wk0_8.json  FF_0_wk0_9.json
