[metadata]
name = FF
version = 1.0.0
description = Check your ESPN Fantasy Football roster from your terminal.
long_description = file: README.md
long_description_content_type = text/markdown
url = github.com/oprince-tech/FF
author = Oliver Prince
author_email = oprince.tech@gmail.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    wheel
python_requires = >=3.6
setup_requires =
    wheel

[options.packages.find]
exclude = ./tests

[options.entry_points]
console_scripts =
    ff = FF.main:main

[options.package_data]
ff = data/cookies.json

[mypy]
check_untyped_defs = True
disallow_untyped_defs = True
